# mhm2_proxy

./: CMakeLists.txt  build.sh
.build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
.build/makeVersionFile/: MHM2_makeVersionFile.cmake  MHM2_makeVersionFile.cmake.in  ___MHM2_AUTOGEN_version.c  version.cpp  version.cpp.in
.build/src/: Makefile  cmake_install.cmake  contigging-extern-template-128.cpp  contigging-extern-template-32.cpp  contigging-extern-template-64.cpp  contigging-extern-template-96.cpp  kmer-extern-template-128.cpp  kmer-extern-template-32.cpp  kmer-extern-template-64.cpp  kmer-extern-template-96.cpp  post_assembly-extern-template-128.cpp  post_assembly-extern-template-32.cpp  post_assembly-extern-template-64.cpp  post_assembly-extern-template-96.cpp  scaffolding-extern-template-128.cpp  scaffolding-extern-template-32.cpp  scaffolding-extern-template-64.cpp  scaffolding-extern-template-96.cpp
.build/upcxx-utils/: Makefile  cmake_install.cmake
cmake/Modules/: CheckSubmodules.cmake
install/cmake/: UPCXX_UTILS-release.cmake  UPCXX_UTILS.cmake  UPCXX_UTILSConfigVersion.cmake
install/include/: upcxx_utils.hpp
src/: CMakeLists.txt  contigging.cpp  contigs.cpp  contigs.hpp  dbjg_traversal.cpp  devices_gpu.cpp  fastq.cpp  fastq.hpp  kmer.cpp  main.cpp  merge_reads.cpp  mhm2.py  options.cpp  options.hpp  packed_reads.cpp  utils.cpp
src/gpu-utils/: CMakeLists.txt  (+3 more)
test/: CMakeLists.txt
upcxx-utils/: .gitlab-ci.yml  CMakeLists.txt  ChangeLog.md
upcxx-utils/src/memory-allocators/: CMakeLists.txt
(+118 files in other folders)
